# resourceschedule_work_scheduler

./: AGENTS.md  BUILD.gn  CODEAGENT.md  CODEOWNERS  OAT.xml  README.en.md  README.md  README.zh.md  README_ZH.md  bundle.json  hisysevent.yaml  ohos.build  workscheduler.gni
frameworks/: BUILD.gn  FRAMEWORKS.md  IWorkSchedService.idl
frameworks/extension/: BUILD.gn
frameworks/extension/include/: iwork_scheduler.h  js_work_scheduler_extension.h  js_work_scheduler_extension_context.h  work_scheduler_extension.h  work_scheduler_extension_context.h  work_scheduler_extension_module_loader.h
frameworks/extension/src/: js_work_scheduler_extension.cpp  js_work_scheduler_extension_context.cpp  work_scheduler_extension.cpp  work_scheduler_extension_context.cpp  work_scheduler_extension_module_loader.cpp
frameworks/include/: background_loader_task_info.h  iwork_sched_service.h  iwork_sched_service_ipc_interface_code.h  work_condition.h  work_info.h  workscheduler_srv_client.h
frameworks/src/: background_loader_task_info.cpp  work_info.cpp  workscheduler_srv_client.cpp
frameworks/test/unittest/: BUILD.gn
frameworks/test/unittest/include/: workinfo_test.h
frameworks/test/unittest/src/: background_loader_task_info_test.cpp  work_sched_client_test.cpp  workinfo_test.cpp
interfaces/kits/cj/: BUILD.gn
interfaces/kits/cj/work_scheduler/: work_scheduler_ffi.cpp  work_scheduler_ffi.h  work_scheduler_log.h  work_scheduler_mock.cpp
interfaces/kits/js/: @ohos.resourceschedule.workScheduler.d.ts  @ohos.workScheduler.d.ts  @ohos.workscheduler.d.ts  BUILD.gn
services/: BUILD.gn  SERVICES.md  libworkschedservice.versionscript
services/native/include/: ability_connect_callback.h  background_loader_mgr.h  detector_value.h  event_publisher.h  ipolicy_listener.h  policy_type.h  scheduler_bg_task_subscriber.h  watchdog.h  work_bundle_group_change_callback.h  work_conn_manager.h  work_datashare_helper.h  work_event_handler.h  work_policy_manager.h  work_queue.h  work_queue_event_handler.h  work_queue_manager.h  work_sched_config.h  work_sched_data_manager.h  work_scheduler_connection.h  work_scheduler_service.h  work_standby_state_change_callback.h  work_status.h
services/native/include/conditions/: battery_level_listener.h  battery_status_listener.h  charger_listener.h  condition_checker.h  group_listener.h  icondition_listener.h  network_listener.h  screen_listener.h  storage_listener.h  timer_info.h  timer_listener.h
services/native/include/policy/: app_data_clear_listener.h  app_removed_listener.h  cpu_policy.h  ipolicy_filter.h  memory_policy.h  power_mode_policy.h  thermal_policy.h
services/native/src/: ability_connect_callback.cpp  background_loader_mgr.cpp  event_publisher.cpp  scheduler_bg_task_subscriber.cpp  watchdog.cpp  work_bundle_group_change_callback.cpp  work_conn_manager.cpp  work_datashare_helper.cpp  work_event_handler.cpp  work_policy_manager.cpp  work_queue.cpp  work_queue_event_handler.cpp  work_queue_manager.cpp  work_sched_config.cpp  work_sched_data_manager.cpp  work_scheduler_connection.cpp  work_scheduler_service.cpp  work_standby_state_change_callback.cpp  work_status.cpp
services/native/src/conditions/: battery_level_listener.cpp  battery_status_listener.cpp  charger_listener.cpp  condition_checker.cpp  group_listener.cpp  network_listener.cpp  screen_listener.cpp  storage_listener.cpp  timer_listener.cpp
services/native/src/policy/: app_data_clear_listener.cpp  app_removed_listener.cpp  cpu_policy.cpp  memory_policy.cpp  power_mode_policy.cpp  thermal_policy.cpp
services/plugin/include/: background_task_observer_plugin_adapter.h  work_sched_plugin_mgr.h
services/plugin/src/: background_task_observer_plugin_adapter.cpp  work_sched_plugin_mgr.cpp
services/test/: BUILD.gn
services/test/src/: ability_connect_callback_test.cpp  background_loader_mgr_test.cpp  event_publisher_test.cpp  scheduler_bg_task_subscriber_test.cpp  watchdog_test.cpp  work_conn_manager_test.cpp  work_policy_manager_test.cpp  work_queue_manager_test.cpp  work_queue_test.cpp  work_sched_config_test.cpp  work_sched_data_manager_test.cpp  work_sched_plugin_mgr_test.cpp  work_scheduler_connection_test.cpp  work_standby_state_change_callback_test.cpp  work_status_test.cpp  workschedulerservice_test.cpp
services/test/src/conditions/: group_listener_test.cpp  network_listener_test.cpp  screen_listener_test.cpp  storage_listener_test.cpp  timer_listener_test.cpp
services/test/src/policy/: app_data_clear_listener_test.cpp  cpu_policy_test.cpp  memory_policy_test.cpp  power_mode_policy_test.cpp  (+1 more)
services/zidl/: BUILD.gn  IWorkScheduler.idl
services/zidl/include/: work_sched_service_proxy.h  work_sched_service_stub.h  work_scheduler_proxy.h  work_scheduler_stub.h  work_scheduler_stub_ani.h  work_scheduler_stub_imp.h  work_scheduler_stub_ipc_interface_code.h
services/zidl/src/: work_sched_service_proxy.cpp  work_sched_service_stub.cpp  work_scheduler_proxy.cpp  work_scheduler_stub.cpp  work_scheduler_stub_ani.cpp  work_scheduler_stub_imp.cpp
test/constanttest/: BUILD.gn  constant_test.cpp
test/fuzztest/backgroundloaderregistertask_fuzzer/: BUILD.gn  backgroundloaderregistertask_fuzzer.cpp  backgroundloaderregistertask_fuzzer.h  backgroundloaderregistertaskfuzzer.cpp
test/fuzztest/workschedulergetworkstatus_fuzzer/: BUILD.gn  workschedulergetworkstatus_fuzzer.cpp  workschedulergetworkstatus_fuzzer.h
test/fuzztest/workscheduleservice_fuzzer/: BUILD.gn  workscheduleservice_fuzzer.cpp
utils/: BUILD.gn  UTILS.md
utils/dump/: BUILD.gn
utils/dump/include/: event_publisher.h  shell_command.h  workscheduler_shell_command.h
utils/dump/src/: event_publisher.cpp  main.cpp  shell_command.cpp  workscheduler_shell_command.cpp
utils/native/: BUILD.gn
utils/native/include/: delayed_sp_singleton.h  sp_singleton.h  work_sched_common.h  work_sched_constants.h  work_sched_errors.h  work_sched_hilog.h  work_sched_hisysevent_report.h  work_sched_system_policy.h  work_sched_utils.h
utils/native/src/: work_sched_hilog.cpp  work_sched_hisysevent_report.cpp  work_sched_utils.cpp
(+120 files in other folders)
