# Copyright (c) 2024  Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos/sa_profile/sa_profile.gni")
import("workscheduler.gni")

group("fwk_group_work_scheduler_all") {
  if (work_scheduler_device_enable) {
    deps = [
      "${worksched_frameworks_path}:workschedclient",
      "${worksched_frameworks_path}/extension:workschedextension",
      "${worksched_interfaces_path}/kits/cj:cj_work_scheduler_ffi",
      "${worksched_interfaces_path}/kits/js:workscheduler",
      "${worksched_interfaces_path}/kits/js/napi/work_scheduler_extension:workschedulerextensionability_napi",
      "${worksched_interfaces_path}/kits/js/napi/work_scheduler_extension_context:workschedulerextensioncontext_napi",
    ]
  }
}

group("service_group_work_scheduler_all") {
  if (work_scheduler_device_enable) {
    deps = [
      "${worksched_root_path}/sa_profile:worksched_sa_profile",
      "${worksched_service_path}:workschedservice",
    ]
  }
}

group("test_work_scheduler_all") {
  testonly = true
  if (work_scheduler_device_enable) {
    deps = [
      "${worksched_frameworks_path}/test/unittest:workinfotest",
      "${worksched_interfaces_path}/test/unittest/work_scheduler_jsunittest:js_unittest",
      "${worksched_service_path}/test:unittest",
      "${worksched_test_path}/fuzztest:fuzztest",
      "${worksched_test_path}/fuzztest/workscheduleservice_fuzzer:fuzztest",
    ]
  }
}
