# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//foundation/resourceschedule/work_scheduler/workscheduler.gni")

config("worksched_private_config") {
  include_dirs = [
    "//utils/native/base/include"
  ]
}

config("worksched_public_config") {
  include_dirs = [
    "native/include"
  ]
}

ohos_shared_library("workschedservice") {
  sources = [
    "native/src/work_scheduler_service.cpp"
  ]

  configs = [
    ":worksched_private_config",
  ]

  public_configs = [ ":worksched_public_config" ]

  deps = [
    "//utils/native/base:utils",
    "${worksched_utils_path}:workschedutils",
  ]

  external_deps = [
    "safwk:system_ability_fwk",
    "ipc:ipc_core",
    "samgr_standard:samgr_proxy",
    "hiviewdfx_hilog_native:libhilog",
  ]

  part_name = "${worksched_native_part_name}"
}