# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//foundation/resourceschedule/work_scheduler/workscheduler.gni")

config("worksched_private_config") {
  include_dirs = [
    "${worksched_service_path}/zidl/include",
    "//foundation/aafwk/standard/frameworks/kits/ability/native/src/",
    "//foundation/ace/napi/native_engine",
  ]
}

config("worksched_public_config") {
  include_dirs = [ "include" ]
}

ohos_shared_library("workschedextension") {
  sources = [
    "${worksched_service_path}/zidl/src/work_scheduler_stub.cpp",
    "${worksched_service_path}/zidl/src/work_scheduler_stub_imp.cpp",
    "src/js_work_scheduler_extension.cpp",
    "src/js_work_scheduler_extension_context.cpp",
    "src/work_scheduler_extension.cpp",
    "src/work_scheduler_extension_context.cpp",
    "src/work_scheduler_extension_module_loader.cpp",
  ]

  configs = [ ":worksched_private_config" ]

  public_configs = [ ":worksched_public_config" ]

  deps = [
    "${worksched_frameworks_path}:workschedclient",
    "${worksched_utils_path}:workschedutils",
    "//foundation/aafwk/standard/frameworks/kits/ability/ability_runtime:ability_context_native",
    "//foundation/aafwk/standard/frameworks/kits/ability/native:abilitykit_native",
    "//foundation/aafwk/standard/frameworks/kits/appkit:app_context",
    "//foundation/ace/napi:ace_napi",
    "//third_party/jsoncpp",
  ]

  external_deps = [
    "ability_base:want",
    "ability_runtime:ability_manager",
    "ability_runtime:app_manager",
    "ability_runtime:runtime",
    "bundle_framework:appexecfwk_core",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "napi:ace_napi",
    "safwk:system_ability_fwk",
    "samgr_standard:samgr_proxy",
  ]

  part_name = "${worksched_native_part_name}"
}
