# Copyright (c) 2022-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//foundation/resourceschedule/work_scheduler/workscheduler.gni")

config("worksched_private_config") {
  include_dirs = [
    "${worksched_service_path}/zidl/include",
    "${ability_runtime_path}/frameworks/native/ability/native/",
    "//foundation/arkui/napi/native_engine",
  ]
}

config("worksched_public_config") {
  include_dirs = [ "include" ]
}

ohos_shared_library("workschedextension") {
  sources = [
    "${worksched_service_path}/zidl/src/work_scheduler_stub.cpp",
    "${worksched_service_path}/zidl/src/work_scheduler_stub_imp.cpp",
    "src/js_work_scheduler_extension.cpp",
    "src/js_work_scheduler_extension_context.cpp",
    "src/work_scheduler_extension.cpp",
    "src/work_scheduler_extension_context.cpp",
    "src/work_scheduler_extension_module_loader.cpp",
  ]

  configs = [ ":worksched_private_config" ]

  public_configs = [ ":worksched_public_config" ]

  deps = [
    "${worksched_frameworks_path}:workschedclient",
    "${worksched_utils_path}:workschedutils",
  ]

  external_deps = [
    "ability_base:want",
    "ability_runtime:ability_context_native",
    "ability_runtime:app_context",
    "ability_runtime:extensionkit_native",
    "ability_runtime:runtime",
    "common_event_service:cesfwk_innerkits",
    "eventhandler:libeventhandler",
    "hilog:libhilog",
    "ipc:ipc_single",
    "napi:ace_napi",
  ]

  relative_install_dir = "extensionability"
  subsystem_name = "resourceschedule"
  part_name = "${worksched_native_part_name}"
}
