# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/components/idl_tool/idl.gni")
import("//foundation/resourceschedule/work_scheduler/workscheduler.gni")

idl_gen_interface("work_scheduler_interface") {
  src_idl = rebase_path("IWorkScheduler.idl")
  log_domainid = "0xD001712"
  log_tag = "WORK_SCHEDULER"
}

config("worksched_public_config") {
  include_dirs = [
    "${target_gen_dir}",
    "include"
  ]
}

ohos_source_set("workschedservice_zidl_stub") {
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  public_configs = [ ":worksched_public_config" ]
  output_values = get_target_outputs(":work_scheduler_interface")
  sources = filter_include(output_values, [ "*_stub.cpp" ])
  deps = [
    ":work_scheduler_interface",
    "${worksched_frameworks_path}:workschedclient"
  ]
  external_deps = [
    "ability_base:want",
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_single",
  ]
  subsystem_name = "resourceschedule"
  part_name = "${worksched_native_part_name}"
}

ohos_source_set("workschedservice_zidl_proxy") {
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  public_configs = [ ":worksched_public_config" ]
  output_values = get_target_outputs(":work_scheduler_interface")
  sources = filter_include(output_values, [ "*_proxy.cpp" ])
  deps = [
    ":work_scheduler_interface",
    "${worksched_frameworks_path}:workschedclient"
  ]
  external_deps = [
    "ability_base:want",
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_single",
  ]
  subsystem_name = "resourceschedule"
  part_name = "${worksched_native_part_name}"
}