# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/resourceschedule/work_scheduler/workscheduler.gni")

group("workscheduler_target") {
  deps = [ ":workscheduler" ]
}

ohos_executable("workscheduler") {
  include_dirs = [ "include" ]

  sources = [
    "src/event_publisher.cpp",
    "src/main.cpp",
    "src/shell_command.cpp",
    "src/workscheduler_shell_command.cpp",
  ]

  cflags = []
  if (target_cpu == "arm") {
    cflags += [ "-DBINDER_IPC_32BIT" ]
  }

  deps = [
    "${worksched_frameworks_path}:workschedclient",
    "${worksched_utils_path}:workschedutils",
  ]

  external_deps = [
    "ability_base:want",
    "battery_manager_native:batterysrv_client",
    "common_event_service:cesfwk_innerkits",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "netmanager_base:net_conn_manager_if",
    "samgr_standard:samgr_proxy",
    "utils_base:utils",
  ]

  install_enable = true
  part_name = "${worksched_native_part_name}"
}
