# Copyright (c) 2022-2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//foundation/resourceschedule/work_scheduler/workscheduler.gni")

config("utils_config") {
  include_dirs = [ "include" ]
}

ohos_source_set("workschedutils") {
  branch_protector_ret = "pac_ret"

  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  sources = [
    "${worksched_utils_path}/src/work_sched_hisysevent_report.cpp",
    "${worksched_utils_path}/src/work_sched_utils.cpp",
  ]

  public_configs = [ ":utils_config" ]

  external_deps = [
    "access_token:libtokenid_sdk",
    "c_utils:utils",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "init:libbegetutil",
    "ipc:ipc_single",
    "jsoncpp:jsoncpp",
    "os_account:os_account_innerkits",
  ]

  defines = [ "WORK_SCHEDULER_TEST" ]

  subsystem_name = "resourceschedule"
  part_name = "${worksched_native_part_name}"
}
