# Copyright (c) 2026-2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/components/fuzztester/fuzz_test.gni")
import("//foundation/resourceschedule/work_scheduler/workscheduler.gni")

ohos_fuzztest("backgroundloaderregistertask_fuzzer") {
  sources = [ "backgroundloaderregistertask_fuzzer.cpp" ]

  include_dirs = [
    "${worksched_frameworks_path}/include",
    "${worksched_services_path}/native/include",
  ]

  deps = [
    "${worksched_frameworks_path}:workschedclient",
  ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_core",
  ]

  part_name = "${worksched_native_part_name}"
  subsystem_name = "resourceschedule"
}